--- a/style.css
+++ b/style.css
@@ -84,9 +84,6 @@ body {
   
   
   
-  
-  
-  
 /* Styles go here */
 
 body {
@@ -95,8 +92,9 @@ body {
     
 }
 
-h2, h3 {
-    margin:0 0 -.7em 0;
+h2,p {
+    margin-left:30px;
+    padding-left:10px;
 }
 
 .column-layout {
@@ -104,25 +102,22 @@ h2, h3 {
     background-color:#12475F;
     margin:40px auto 0 auto;
     line-height: 1.65;
-    padding:20px 40px;
     display:flex;
+    background-color:lightblue;
     
 }
 
 .main-column {
-    flex:3;
-    order:2;
+    flex:.66;
+    order:1;
+    align:left;
 }
 
 .sidebar-one {
-    flex:1;
-    order:1;
+    flex:.33;
+    order:2;
 }
 
-.sidebar-two {
-    flex:1;
-    order:3;
-}
 
 .call-outs-container {
     max-width:800px;
@@ -171,10 +166,14 @@ a:hover, a:active {
     background-color: lightblue;
 
 }
-
-
+.image{
+  height:100px;
+  width:200px;
+  padding-top:30px;
 }
-
-
-
+#map {
+        height: 400px;
+        max-width:800px;
+        margin:40px auto 0 auto;
+       }
 
