--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
   color:white;
   line-height:1.6;
   text-align:center;
-  
 }
 
 .container {
@@ -50,6 +49,7 @@ body {
 
 .btn {
   display: inline-block;
+  color:white;
   text-decoration:none;
   padding: 1rem 2rem;
   border:white 1px solid;
@@ -95,7 +95,6 @@ body {
 h2,p {
     margin-left:30px;
     padding-left:10px;
-    color:black;
 }
 
 .column-layout {
